--- a/comun/src/main/resources/static/css/estilos.css
+++ b/comun/src/main/resources/static/css/estilos.css
@@ -1,4 +1,4 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -8,15 +8,12 @@ body {
     font-family: 'Helvetica Neue', Helvetica, sans-serif;
     color: #000;
     background-color: #fff;
-    margin: 0;
-    padding: 0;
     line-height: 1.6;
 }
 
 
-
 /*Errores de Validaciones*/
-.error{
+.error {
     color: red;
     font-weight: bold;
 }
@@ -27,13 +24,19 @@ h2 {
     font-weight: 400;
     text-align: center;
     margin: 2rem 0;
+    text-transform: uppercase;
+}
+
+a {
+    vertical-align: middle;
 }
 
 .contenedor-principal {
     max-width: 900px;
     max-height: 1000px;
+    height: 100vh;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 0 2rem;
     position: relative;
 }
 
@@ -47,13 +50,17 @@ form {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.fotografia{
+.fotografia {
     position: absolute;
-    top: 25%;
+    top: 30%;
     right: 6%;
     transform: translate(-50%, -50%);
     border: 1px solid #ddd;
     padding: 5px;
+}
+
+#miniatura{
+    display: block;
 }
 
 /* Etiquetas y campos de entrada */
@@ -78,22 +85,22 @@ textarea {
 }
 
 /* Botones */
-input[type="button"],
-input[type="submit"] {
-    background-color: #000;
-    color: #fff;
-    border: none;
-    padding: 0.75rem 1.5rem;
-    margin-right: 0.5rem;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-}
+/*input[type="button"],*/
+/*input[type="submit"] {*/
+/*    background-color: #000;*/
+/*    color: #fff;*/
+/*    border: none;*/
+/*    padding: 0.75rem 1.5rem;*/
+/*    !*margin-right: 0.5rem;*!*/
+/*    cursor: pointer;*/
+/*    font-size: 1rem;*/
+/*    transition: background-color 0.3s ease;*/
+/*}*/
 
-input[type="button"]:hover,
-input[type="submit"]:hover {
-    background-color: #333;
-}
+/*input[type="button"]:hover,*/
+/*input[type="submit"]:hover {*/
+/*    !*background-color: #333;*!*/
+/*}*/
 
 /* Mensajes de error y éxito */
 .error {
@@ -135,12 +142,11 @@ textarea {
 }
 
 /*NavBar Registro Empleado*/
-.navbar{
-    position: absolute;
-    left: 10.5%;
-    top: -3%;
-    /*!*height: 100px;*!*/
-    /*background: #fff;*/
+.navbar {
+    justify-content: space-around;
+    display: flex;
+    gap: 20px;
+    margin: 60px 0 30px;
 }
 
 nav ul {
@@ -148,17 +154,24 @@ nav ul {
     display: flex;
 }
 
+nav ul li {
+    margin: 0;
+}
+
+nav ul li a {
+    margin: 0 5px;
+    background: #fff;
+    box-shadow: -3px 2px rgba(0, 0, 0, .1);
+    border-radius: 0 0 0 10px;
+    padding: 10px 46px;
+}
+
 
 nav ul li a img {
     opacity: 0.5;
     transition: opacity 0.3s ease-in-out;
-    width: 50px;
+    width: 40px;
     height: auto;
-    background: #fff;
-    box-shadow: 0 2px  rgba(0, 0, 0, 0.1);
-    border-radius: 10px 0 0 10px;
-    padding: 5px;
-
 }
 
 nav ul li a.active img {
@@ -189,7 +202,7 @@ h1 {
 
 h2 {
     font-size: 1.4rem;
-    margin-top: 2rem;
+    margin: 2rem 0;
     border-bottom: 1px solid #ddd;
     padding-bottom: 0.3rem;
     font-weight: 400;
@@ -230,17 +243,18 @@ hr {
 .acciones {
     display: flex;
     gap: 1rem;
+    margin: 20px 0 30px;
 }
 
-.acceso_fucionalidades{
+.acceso_fucionalidades {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1rem;
 }
 
 /*Botones*/
-
-.boton {
+.boton,
+input.boton {
     display: inline-block;
     width: 50%;
     padding: 0.6rem 1.2rem;
@@ -248,15 +262,29 @@ hr {
     background-color: #fff;
     color: #111;
     text-decoration: none;
+    text-align: center;
     font-size: 0.95rem;
     text-transform: uppercase;
     letter-spacing: 0.03em;
     transition: all 0.3s ease;
+    font-family: inherit;
+    vertical-align: middle;
 }
 
 .boton:hover {
     background-color: #111;
     color: #fff;
+}
+
+.boton.principal {
+    background-color: #000;
+    color: #fff;
+}
+
+.boton.principal:hover {
+    background-color: #52c349;
+    color: #fff;
+    border: 1px solid #d0cfcf;
 }
 
 .boton.secundario {
@@ -269,36 +297,37 @@ hr {
     color: #fff;
 }
 
-
-input.boton{
-    display: inline-block;
-    padding: 0.6rem 1.2rem;
-    border: 1px solid #111;
-    background-color: #fff;
-    color: #111;
-    text-decoration: none;
-    font-size: 0.95rem;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    transition: all 0.3s ease;
+.boton.foto{
+    background: #fff;
+    border-color: #777;
+    color: #000;
 }
 
-input.boton:hover{
+.boton.foto:hover{
+    background: #000;
+    border-color: #777;
+    color: #fff;
+}
+
+
+input.boton:hover {
     border-color: #777;
     color: #777;
 }
 
-.btn-form{
+.btn-form {
     display: flex;
     gap: 3px;
     justify-content: space-between;
+    height: 50px;
+    margin: 30px 0 auto;
 }
 
-.btn-seleccionar{
+.btn-seleccionar {
     margin: 20px 0;
 }
 
-/*Tablas Busqueda de empleado*/
+/*Tablas Búsqueda de empleado*/
 
 .tabla-datos {
     width: 100%;
