--- a/comun/src/main/resources/static/css/estilos.css
+++ b/comun/src/main/resources/static/css/estilos.css
@@ -73,6 +73,8 @@ label {
 input[type="text"],
 input[type="file"],
 input[type="date"],
+input[type="email"],
+input[type="password"],
 select,
 textarea {
     width: 100%;
@@ -84,23 +86,7 @@ textarea {
     box-sizing: border-box;
 }
 
-/* Botones */
-/*input[type="button"],*/
-/*input[type="submit"] {*/
-/*    background-color: #000;*/
-/*    color: #fff;*/
-/*    border: none;*/
-/*    padding: 0.75rem 1.5rem;*/
-/*    !*margin-right: 0.5rem;*!*/
-/*    cursor: pointer;*/
-/*    font-size: 1rem;*/
-/*    transition: background-color 0.3s ease;*/
-/*}*/
 
-/*input[type="button"]:hover,*/
-/*input[type="submit"]:hover {*/
-/*    !*background-color: #333;*!*/
-/*}*/
 
 /* Mensajes de error y éxito */
 .error {
@@ -252,6 +238,8 @@ hr {
     gap: 1rem;
 }
 
+
+
 /*Botones*/
 .boton,
 input.boton {
@@ -327,11 +315,16 @@ input.boton:hover {
     margin: 20px 0;
 }
 
+/*Búsqueda de Empleados*/
+.resultados{
+    margin: 50px 0;
+}
+
 /*Tablas Búsqueda de empleado*/
 
 .tabla-datos {
     width: 100%;
-    max-width: 900px;
+    /*max-width: 900px;*/
     margin: 2rem auto;
     border-collapse: collapse;
     background-color: #ffffff;
@@ -349,8 +342,8 @@ input.boton:hover {
 }
 
 .tabla-datos th {
-    background-color: #fff;
-    color: black;
+    background-color: #000;
+    color: #fff;
     text-transform: uppercase;
     font-size: 0.9rem;
 }
